recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:16: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:19: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:22: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:25: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:28: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:31: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^